# rust-rapport

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  release-plz.toml  renovate.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: audit.yml  ci.yml  clippy.yml  demo.yml  release-plz.yml  release.yml
demo/: Cargo.toml
demo/src/: lib.rs  other.rs
src/: level.rs  lib.rs  main.rs  output.rs  print.rs
supply-chain/: audits.toml  config.toml
tests/: cli.rs
tests/fixtures/: clippy_clean.json  clippy_malformed.json  clippy_warnings.json
