[package]
name = "rust-rapport"
version = "0.0.1"
edition = "2021"
description = "rust-rapport"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
clap = { version = "^4", features = ["derive"] }
